[gd_scene load_steps=49 format=2]

[ext_resource path="res://Fonts/Ubuntu-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://default_font_dog.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Dog2.gd" type="Script" id=4]
[ext_resource path="res://Dog1.gd" type="Script" id=5]
[ext_resource path="res://VisualDogs.gd" type="Script" id=6]
[ext_resource path="res://CatTimerLabel.gd" type="Script" id=7]
[ext_resource path="res://Art/greycat1.png" type="Texture" id=8]
[ext_resource path="res://Art/npc1.png" type="Texture" id=9]
[ext_resource path="res://Art/puppy1.png" type="Texture" id=10]
[ext_resource path="res://Art/puppy2.png" type="Texture" id=11]
[ext_resource path="res://Audio/Meow.mp3" type="AudioStream" id=12]
[ext_resource path="res://Audio/MainAudio.mp3" type="AudioStream" id=13]
[ext_resource path="res://Art/BlankShop.png" type="Texture" id=14]
[ext_resource path="res://Art/bigbutton.png" type="Texture" id=15]
[ext_resource path="res://Fonts/Milky Coffee.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Audio/Click.mp3" type="AudioStream" id=17]
[ext_resource path="res://mediumBtn.tres" type="Theme" id=18]
[ext_resource path="res://Fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Art/table.png" type="Texture" id=20]
[ext_resource path="res://Art/white_oval.png" type="Texture" id=21]
[ext_resource path="res://Art/DoorClosed.png" type="Texture" id=22]
[ext_resource path="res://Audio/bell.mp3" type="AudioStream" id=23]
[ext_resource path="res://Audio/bark.mp3" type="AudioStream" id=24]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=25]

[sub_resource type="DynamicFont" id=21]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -22
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="Animation" id=12]
resource_name = "Popups"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Popup/Control2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 3.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 139, -104 ), Vector2( 139, 75 ), Vector2( 139, 75 ), Vector2( 139, -104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup/Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.9, 4.1, 7.7, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 141, -83 ), Vector2( 141, -83 ), Vector2( 141, 10 ), Vector2( 141, 10 ), Vector2( 141, -83 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Popup/Control2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 368, -108 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup/Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 141, -83 ) ]
}

[sub_resource type="DynamicFont" id=14]
size = 26
outline_size = 2
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 500, 398 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
modulate_color = Color( 0.733333, 0.733333, 0.733333, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 500, 398 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 500, 398 )

[sub_resource type="Theme" id=7]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="Animation" id=22]
resource_name = "CuteGrow"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CutenessUpdate/Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CutenessUpdate/Control/CurrCute:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.635294, 1, 0.984314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CutenessUpdate/Control:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CutenessUpdate/Control:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CutenessUpdate/Control/CurrCute:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="Shader" id=19]

[sub_resource type="ShaderMaterial" id=20]
shader = SubResource( 19 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="GUI" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1042.0
margin_bottom = 614.0

[node name="BlankShop" type="Sprite" parent="GUI/Background"]
position = Vector2( 560, 327 )
scale = Vector2( 0.518425, 0.454694 )
texture = ExtResource( 14 )

[node name="GuySprite" type="Sprite" parent="GUI"]
position = Vector2( 512, 290 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="DoorClosed" type="Sprite" parent="GUI/GuySprite"]
position = Vector2( 2195, 784.973 )
scale = Vector2( -1.397, 1.24063 )
texture = ExtResource( 22 )

[node name="Table" type="Sprite" parent="GUI"]
position = Vector2( 496, 435 )
scale = Vector2( 0.7, 0.8 )
texture = ExtResource( 20 )

[node name="PuppySprite1" type="Sprite" parent="GUI"]
position = Vector2( 376, 352 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="WhiteOval2" type="Sprite" parent="GUI"]
position = Vector2( 628, 527.5 )
scale = Vector2( 0.5, 0.390351 )
texture = ExtResource( 21 )

[node name="WhiteOval3" type="Sprite" parent="GUI"]
position = Vector2( 369, 529 )
scale = Vector2( 0.50266, 0.356889 )
texture = ExtResource( 21 )

[node name="Dog1Val" type="Label" parent="GUI"]
margin_left = 33.0
margin_top = 453.0
margin_right = 709.0
margin_bottom = 588.0
custom_colors/font_color = Color( 0.772549, 0.952941, 1, 1 )
custom_fonts/font = SubResource( 21 )
text = "Dog 1:"
align = 1

[node name="Dog1Label" type="Label" parent="GUI"]
margin_left = 198.0
margin_top = 503.0
margin_right = 537.0
margin_bottom = 608.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "500"
align = 1

[node name="Dog2Val" type="Label" parent="GUI"]
margin_left = 293.0
margin_top = 455.0
margin_right = 969.0
margin_bottom = 590.0
custom_colors/font_color = Color( 0.772549, 0.952941, 1, 1 )
custom_fonts/font = SubResource( 21 )
text = "Dog 2:"
align = 1

[node name="Dog2Label" type="Label" parent="GUI"]
margin_left = 559.0
margin_top = 504.0
margin_right = 693.0
margin_bottom = 609.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "-700"
align = 1

[node name="1Button" type="Button" parent="GUI"]
margin_left = -22.0
margin_top = 72.0
margin_right = 328.0
margin_bottom = 202.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/focus = SubResource( 15 )
text = "Take Dog 1"

[node name="2Button" type="Button" parent="GUI"]
margin_left = -22.0
margin_top = 176.0
margin_right = 328.0
margin_bottom = 306.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/focus = SubResource( 16 )
text = "Take Dog 2"

[node name="BothButtons" type="Button" parent="GUI"]
margin_left = -21.0
margin_top = 272.0
margin_right = 329.0
margin_bottom = 402.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/focus = SubResource( 17 )
text = "Take Both"

[node name="WinLoseLabel" type="Label" parent="GUI"]
margin_left = 578.0
margin_top = 24.0
margin_right = 657.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = " 10
-10"

[node name="WhiteOval" type="Sprite" parent="GUI"]
position = Vector2( 840, 64.5 )
scale = Vector2( 0.808511, 0.635965 )
texture = ExtResource( 21 )

[node name="CatTimerLabel" type="Label" parent="GUI"]
margin_left = 709.0
margin_top = 10.0
margin_right = 975.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Cat Timer:"
align = 1
script = ExtResource( 7 )

[node name="CatTimer" type="Timer" parent="GUI/CatTimerLabel"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="MeowAudio" type="AudioStreamPlayer" parent="GUI/CatTimerLabel/CatTimer"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="CatApproach" type="Node2D" parent="GUI"]
position = Vector2( 0, -1 )

[node name="Popup" type="AnimationPlayer" parent="GUI/CatApproach"]
anims/Popups = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="Control2" type="Control" parent="GUI/CatApproach/Popup"]
margin_left = 368.0
margin_top = -108.0
margin_right = 408.0
margin_bottom = -67.0

[node name="ColorRect" type="ColorRect" parent="GUI/CatApproach/Popup/Control2"]
margin_left = -125.0
margin_top = -65.0
margin_right = 308.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0.65 )

[node name="Label" type="Label" parent="GUI/CatApproach/Popup/Control2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 7.0
margin_right = -1.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "A cat's coming in 15s... 
If your dogs see it, they'll run off!"
align = 1

[node name="Control" type="Control" parent="GUI/CatApproach/Popup"]
margin_left = 141.0
margin_top = -83.0
margin_right = 181.0
margin_bottom = -43.0

[node name="ColorRect2" type="ColorRect" parent="GUI/CatApproach/Popup/Control"]
anchor_left = -6.325
anchor_top = -1.325
anchor_right = 9.85
anchor_bottom = 1.725
margin_left = 119.0
margin_top = 51.0
margin_right = -44.0
margin_bottom = -6.0
color = Color( 1, 1, 1, 0.65 )

[node name="Label" type="Label" parent="GUI/CatApproach/Popup/Control/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -6.0
margin_bottom = -2.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Closing the door keeps your pups 
from running, but stops higher scores!"
align = 1

[node name="DoorButton" type="Button" parent="GUI"]
margin_left = 739.0
margin_top = 376.0
margin_right = 971.0
margin_bottom = 468.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/focus = SubResource( 18 )
text = "Close Door"

[node name="PuppySprite2" type="Sprite" parent="GUI"]
position = Vector2( 648, 354 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="CreditsLabel" type="Label" parent="GUI"]
margin_left = 142.0
margin_top = 18.0
margin_right = 818.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 323, 52 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
text = "Too Cute:
Too Ugly:"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CutenessLabel" type="Label" parent="GUI"]
margin_left = 525.0
margin_top = 135.0
margin_right = 1207.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 323, 52 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
text = "Total 
Cuteness"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CutenessUpdate" type="AnimationPlayer" parent="GUI"]
anims/CuteGrow = SubResource( 22 )
anims/RESET = SubResource( 23 )

[node name="Control" type="Control" parent="GUI/CutenessUpdate"]
margin_left = 857.0
margin_top = 259.0
margin_right = 857.0
margin_bottom = 259.0

[node name="CurrCute" type="Label" parent="GUI/CutenessUpdate/Control"]
margin_left = -162.0
margin_top = -30.0
margin_right = 167.0
margin_bottom = 147.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "300"
align = 1

[node name="CatSprite" type="Sprite" parent="."]
material = SubResource( 20 )
position = Vector2( 968, 68 )
scale = Vector2( 0.068, 0.068 )
texture = ExtResource( 8 )

[node name="Dog1" type="Node2D" parent="."]
position = Vector2( 0, -2 )
script = ExtResource( 5 )

[node name="Dog2" type="Node2D" parent="."]
position = Vector2( 1, 0 )
script = ExtResource( 4 )

[node name="VisualDogs" type="Node2D" parent="."]
position = Vector2( 255, 170 )
script = ExtResource( 6 )

[node name="Bark" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -15.0

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="MainAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DoorBell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -25.0
pitch_scale = 1.5

[connection signal="pressed" from="GUI/1Button" to="." method="_on_1Button_pressed"]
[connection signal="pressed" from="GUI/2Button" to="." method="_on_2Button_pressed"]
[connection signal="pressed" from="GUI/BothButtons" to="." method="_on_BothButtons_pressed"]
[connection signal="cat_approaching" from="GUI/CatTimerLabel" to="." method="_on_CatTimerLabel_cat_approaching"]
[connection signal="timeout" from="GUI/CatTimerLabel/CatTimer" to="." method="_on_CatTimer_timeout"]
[connection signal="pressed" from="GUI/DoorButton" to="." method="_on_DoorButton_pressed"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
